--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -6,7 +6,7 @@
         <h2>
             <a href='/blogPost/{{blogPost.id}}'> {{blogPost.title}}</a>
         </h2>
-        <p>Posted by {{blogPost.user.name}} on {{blogPost.date_created}}</p>
+        <p>Posted by {{blogPost.user.name}} on {{format_date blogPost.date_created}}</p>
     </div>
       <div class="col-md-7">
     <p>
