add date and name to blog post

--- a/views/blogPost.handlebars
+++ b/views/blogPost.handlebars
@@ -2,4 +2,5 @@
     <h2>{{name}}</h2> 
     <p>{{title}}</p>
     <p>{{message}}</p>
+    <p>Created by {{user.name}} on {{format_date date_created}}</p>
 </div>
