--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,7 +31,7 @@
         </main>
     </div>
     {{#if logged_in}}
-    <scirpt src='/js/logout.js'></scirpt>
+    <script src='/js/logout.js'></script>
     {{/if}}
 </body>
 
