--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -11,7 +11,7 @@
         <form class='form new-blogPost-form'>
             <div class="form-group">
                 <label for='blogPost-title'>Post Title:</label>
-                <input class='form-input' type= 'text' id='blogPost-title' name:'blogPost-title'/>
+                <input class='form-input' type= 'text' id='blogPost-title' name='blogPost-title'/>
             </div>
             <div class="form-group">
                 <label for="message-input">Message</label>
@@ -23,7 +23,7 @@
         </form>
     </div>
     {{#if blogPosts.length}}
-    <div class='cole-md-6 blogPost-list'>
+    <div class='col-md-6 blogPost-list'>
         <h3>Current Posts:</h3>
 
         {{#each blogPosts as |blogPost|}}
