--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,7 @@
 {{!-- loop over each post in the blogposts array --}}
 
 {{#each blogPosts as |blogPost| }}
-<div class="row blogPost">
+<div class="eachPost row blogPost">
     <div class="col-md-5">
         <h2>
             <a href='/blogPost/{{blogPost.id}}'> {{blogPost.title}}</a>
@@ -10,7 +10,7 @@
     </div>
       <div class="col-md-7">
     <p>
-      {{project.message}}
+      {{blogPost.message}}
     </p>
   </div>
 </div>
