--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,7 @@
 <div class="row">
-    <div class="col-md-6">
+    <div class="create-form col-md-6">
         <h2>Login</h2>
-
+<br>
         <form class= 'form login-form'>
             <div class="form-group">
                 <label for='email-login'>email:</label>
@@ -16,7 +16,9 @@
             </div>
         </form>
     </div>
-    <form class="form signup-form">
+    <form class=" create-form form signup-form">
+        <h2>Sign up</h2>
+        <br>
         <div class="form-group">
             <label for='name-signup'>name:</label>
             <input type="text" class="form-input" id= 'name-signup'/>
