--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,10 +1,10 @@
 <div class="row">
     <div class="col-auto">
-        <h2>Welcome, {{name}}</h2>
+        <h2 class= "welcome">Welcome, {{name}}</h2>
     </div>
 </div>
 
-<div class="row">
+<div class="create-form row mt-4">
     <div class="col-md-6">
         <h3>Write a blog post:</h3>
 
@@ -22,22 +22,26 @@
             </div>
         </form>
     </div>
-    {{#if blogPosts.length}}
-    <div class='col-md-6 blogPost-list'>
-        <h3>Current Posts:</h3>
 
-        {{#each blogPosts as |blogPost|}}
-        <div class="row mb-2">
+   
+ 
+  <div class="col-md-6 blogPost-list">
+    <h3>Your blog Posts:</h3>
+
+    <div class="row mb-2">
+      {{#each user.blogPost as |blogPost| }}
+
         <div class="col-md-8">
-            <h4><a href="/blogPost/{{blogPost.id}}">{{blogPost.name}}</a></h4>
+          <h4><a href="/blogPost/{{blogPost.id}}">{{blogPost.title}}</a></h4>
         </div>
+        
         <div class="col-md-4">
-            <button class="btn btn-sm btn-danger" data-id="{{blogPost.id}}">DELETE</button>
+          <button class="btn btn-sm btn-danger" data-id="{{blogPost.id}}">DELETE</button>
         </div>
-        </div>
-        {{/each}}
+    
+      {{/each}}
     </div>
-    {{/if}}
+  
 </div>
 
 <script src="./js/profile.js"></script>    
