create card for comment display

--- a/views/blogPost.handlebars
+++ b/views/blogPost.handlebars
@@ -4,3 +4,21 @@
     <p>{{message}}</p>
     <p>Created by {{user.name}} on {{format_date date_created}}</p>
 </div>
+
+<div class='card'>
+<h5>Comments</h5>
+
+    {{#each comments as |comment|}}
+    <div>
+        <p>{{comment.message}}</p>
+        <p>{{comment.user.name}}, {{format_date comment.date_created}}</p>
+    </div>
+    {{/each}}
+
+</div>
+
+<div class='add-comment'>
+    <button id='add-comment-btn' class= 'btn'>Add comment</button>
+</div>
+
+{{!-- list comments here --}}
