--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -29,7 +29,7 @@
     <h3>Your blog Posts:</h3>
 
     <div class="row mb-2">
-      {{#each user.blogPost as |blogPost| }}
+      {{#each blogposts as |blogPost| }}
 
         <div class="col-md-8">
           <h4><a href="/blogPost/{{blogPost.id}}">{{blogPost.title}}</a></h4>
