--- a/views/blogPost.handlebars
+++ b/views/blogPost.handlebars
@@ -18,7 +18,17 @@
 </div>
 
 <div class='add-comment'>
-    <button id='add-comment-btn' class= 'btn'>Add comment</button>
+    
+        <form class='form new-comment-form'>
+
+            <div class="form-group">
+                <label for="message-input">Message</label>
+                <textarea class="form-control" id="message-input" rows="2"></textarea>
+            </div>
+                <div class="form-group">
+                <button type="submit" class="btn btn-primary">Comment</button>
+            </div>
+        </form>
 </div>
 
-{{!-- list comments here --}}
+<script src="./js/comment.js"></script>   
