--- a/views/blogPost.handlebars
+++ b/views/blogPost.handlebars
@@ -19,7 +19,7 @@
 
 <div class='add-comment'>
     
-        <form class='form new-comment-form'>
+        <form class='form new-comment-form' post-id= "{{id}}">
 
             <div class="form-group">
                 <label for="message-input">Message</label>
@@ -31,4 +31,5 @@
         </form>
 </div>
 
-<script src="./js/comment.js"></script>   
+<script src="/js/comment.js"></script> 
+  
